modularize the project
and add Maven wrapper and build script.